# ram-utils

./: CMakeLists.txt
src/: array.h  bit.cc  bit.h  gate.cc  gate.h  gprf.h  local.h  main.cc  nat.h  pack.h  permute.h  prg.h  room.h  scan.h  unary.h
test/: bit.cc
